--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,13 +27,10 @@ body{
 	background:#FFF;
 }
 body{
-	background-image: url(UI\ Glassmorphism\ app_Onboarding\ Screen\ \(Community\)\ \(5\).png);
+	background-image: url(Glass\ icon\ \(2\).jpg);
 	width: 100%;
 	height: 100vh;
 	background-clip: 100px;
-}
-.MuiAutocomplete-root{
-	width: 100%;
 }
 /*----start-wrap----*/
 .wrap{
@@ -79,26 +76,32 @@ body{
 .swiper-backface-hidden .swiper-slide{
 	box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
 	overflow: hidden;
-	border-top: 1px solid rgba(237, 233, 233, 0);
-	border-left: 1px solid rgba(255, 255, 255, 0.829);
+	border-top: 1px solid rgba(255, 255, 255, 0.5);
+	border-left: 1px solid rgba(255, 255, 255, 0.5);
 	backdrop-filter: blur(5px);
-	background: rgba(213, 212, 222, 0.01);
+	background: rgba(9, 2, 143, 0.292);
 	border-radius: 5px;
 }
 
 .mySwiper{
 	width: 70%;
 	box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-	overflow: hidden;
-	border-top: 1px solid rgba(237, 233, 233, 0);
-	border-left: 1px solid rgba(255, 255, 255, 0.829);
-	backdrop-filter: blur(5px);
-	background: rgba(213, 212, 222, 0.01);
-	border-radius: 5px;
-	z-index: -1;
+    overflow: hidden;
+    border-top: 1px solid rgba(255, 255, 255, 0.804);
+    border-left: 1px solid rgba(255, 255, 255, 0.759);
+    backdrop-filter: blur(5px); 
+    border-radius: 10px;
+	
 }
-
-/*
+/* .SwiperSlide{
+	box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    border-top: 1px solid rgba(255, 255, 255, 0.804);
+    border-left: 1px solid rgba(255, 255, 255, 0.759);
+    backdrop-filter: blur(5px);
+    
+    border-radius: 10px;
+}
 .mySwiper .wrap{
 	box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     overflow: hidden;
