--- a/src/admin/db.css
+++ b/src/admin/db.css
@@ -352,7 +352,7 @@ body {
 	font-size: 36px;
 	font-weight: 600;
 	margin-bottom: 10px;
-	color: var(--dark);
+	color: #FBFBFB;
 }
 #content main .head-title .left .breadcrumb {
 	display: flex;
