--- a/src/css/style.css
+++ b/src/css/style.css
@@ -480,7 +480,7 @@ input[type=checkbox].css-checkbox15:checked + label i.css-label15 {
 /*---start-rating----*/
 /*---start-product-grid----*/
 .product-grid{
-	width: 29%;
+	width: 20%;
 	margin: 0 4% 4% 0;
 	float: left;
 	border: 1px solid #E9E9E9;
@@ -3499,5 +3499,8 @@ span.mail a:hover{
 				visibility:visible;
 				opacity: 1
 			}
+		}
+		.btd{
+			margin-left: 20px;
 		}
 		
