--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3503,4 +3503,12 @@ span.mail a:hover{
 		.btd{
 			margin-left: 20px;
 		}
-		
+		.h312{
+			color: white;
+		}
+		.h3121{
+			color: rgb(128, 135, 44);
+		}
+		.alp{
+			margin-left: 30%;
+		}
